# routes/userRoute.js
@@ -10,6 +10,8 @@ import {
   // Add more controllers as needed (e.g., verifyPhone, resendVerification)
 } from '../controllers/userController.js';
 import { validateRegister, validateLogin } from '../validators/userValidator.js';
+import { updateUserProfile } from '../controllers/userController.js';
+import {ensureAuth} from "../middleware/authMiddleware.js"
 // ⬅ authLimiter and otpRateLimiter deliberately NOT imported
 
 const router = express.Router();
@@ -29,6 +31,7 @@ router.post('/login/verify-otp',  verifyPhoneLoginOTP);
 
 // router.post('/forgot-password', forgotPassword);
 router.post('/reset-password', resetPassword);
+router.patch('/update-profile', ensureAuth, updateUserProfile);
 
 
 export default router;
